modification de l'index

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,2 +1,9 @@
-%h1 StaticPages#index
-%p Find me in app/views/static_pages/index.html.haml
+%h1 Imelavi, le service le plus piné des services !
+
+%p Page d'accueil du service imelavi
+
+%p Ici on expliquera qu'il faut se connecter et un petit teaser du service
+
+%p On affichera aussi des notes de services (Yahoo qui marche pas toussa toussa ...)
+
+%p Et juste là, un petit géranium ...
