Gestion des rôles et autorisations liées

--- a/app/views/roles/index.html.haml
+++ b/app/views/roles/index.html.haml
@@ -1,10 +1,11 @@
 %h1 Liste de Roles
 
 - @roles.each do |role|
-  %table
-    %tr
-      %td=role.name
-      %td= link_to "Revoke", user_role_path(@user,role.name), :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-  =link_to "Ajouter un role",  new_user_role_path(@user)
-  =link_to "Back", user_path(@user)
+  %h2= role.name.capitalize
+  %table
+    - role.users.each do |u|
+      %tr
+        %td= u.fullname
+        -if can? :destroy, role
+          %td= link_to "Supprimer", user_role_path(u,role.name), :method => :delete, :data => { :confirm => 'Are you sure ?'}
