--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -3,19 +3,16 @@
   .grid-4-small-1
     - if can? :manage, :admin
       =link_to admin_configurable_path, class:'box shadow-1 mtm bouton bouton-light'  do
-        %div.small-inbl
-          =image_tag('config.png', class:'icon small_icon')
+        %i.zmdi.zmdi-wrench
         %div.small-inbl
           Configuration
     - if can? :read, User
       =link_to  users_path, class:'box shadow-1 mtm bouton bouton-light'  do
-        %div.small-inbl
-          =image_tag('users.png', class:'icon small_icon' )
+        %i.zmdi.zmdi-accounts
         %div.small-inbl
           Utilisateurs
     - if can? :read, Role
       =link_to  roles_path, class:'box shadow-1 mtm bouton bouton-light'  do
-        %div.small-inbl
-          =image_tag('roles.png', class:'icon small_icon')
+        %i.zmdi.zmdi-key
         %div.small-inbl
           Roles
