ajout de slack-chat

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,13 @@
     = csrf_meta_tags
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag :application
+    -if slack_chat?
+      =javascript_include_tag 'slack-chat.min.js'
+      =javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js'
+      =stylesheet_link_tag "slack-chat.css"
+      =stylesheet_link_tag "slack-chat-custom.css"
+
+      
   %body
     %header
       %nav
@@ -14,5 +21,9 @@
       / #notif
       /   %div{:class => "#{key} notif"}= value
 
+
     .center.mw1140p
       = yield
+
+    -if slack_chat?
+      =slack_chat_box
