--- a/app/views/shared/_slack_chat.html.erb
+++ b/app/views/shared/_slack_chat.html.erb
@@ -1,4 +1,4 @@
-<div class="message-box" data-toggle="tooltip" title="Besoin d'aide ?">
+<div class="message-box" data-toggle="tooltip" title="<%= t('slack_chat.button_title')%>">
 	<a href="javascript:void(0);" class="message-box-icon">
 		?
 		<div class="badge badge-danger slack-message-count"></div>
