--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @user
+= link_to t('users.forms.buttons.show'), @user
 \|
-= link_to 'Back', users_path
+= link_to t('users.forms.buttons.back'), users_path
