--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,18 +1,8 @@
 %p#notice= notice
 
-%p
-  %b Email:
-  = @user.email
-%p
-  %b Firstname:
-  = @user.firstname
-%p
-  %b Lastname:
-  = @user.lastname
-%p
-  %b Hruid:
-  = @user.hruid
+- %w(email firsnatme lastname hruid sign_in_count last_sign_in_at created_at updated_at role).each do |attribute|
+  =display_attribute(attribute)
 
-= link_to 'Edit', edit_user_path(@user)
+= link_to t('users.forms.buttons.edit'), edit_user_path(@user)
 \|
-= link_to 'Back', users_path
+= link_to t('users.forms.buttons.back'), users_path
