Mise a niveau avec le contenu du repo 'imelavi'

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,6 +3,9 @@
 - %w(email firsnatme lastname hruid sign_in_count last_sign_in_at created_at updated_at role).each do |attribute|
   =display_attribute(@user, attribute)
 
+
+= link_to 'Dashboard', dashboard_user_path(@user)
+\|
 = link_to t('users.forms.buttons.edit'), edit_user_path(@user)
 \|
 = link_to t('users.forms.buttons.back'), users_path
