--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -8,9 +8,14 @@
         %ul
           - if user_signed_in?
             - if can? :read, :admin
+              %li{style: "width:420px;"}
+                =form_tag  search_by_id_users_path,:method => :get, :user_id => :id_element do
+                  =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :size => 30, :id_element => '#id', :placeholder => "nom.prenom.année"
+                  =hidden_field_tag "id"
+                  =submit_tag 'GO!', :class => ""
               %li
                 =link_to "Administration", admin_path
-            %li
-              =link_to "Menu 1", :back
+            -#%li
+              -#=link_to "Menu 1", :back
 
           = render 'layouts/user_widget'
