--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,9 +1,9 @@
 %header
-  .int
+  .int.plm.prm
     %nav
       #logo.left
         =link_to root_path do
-          =image_tag "logo.png", :class => "vertical-center"
+          =image_tag "logo_alumni.png", :class => "vertical-center"
       .menu
         %ul
           - if user_signed_in?
