--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -2,17 +2,17 @@
   %h1 Administration
   .grid-4-small-1
     - if can? :manage, :admin
-      =link_to admin_configurable_path, class:'box shadow-1 mtm bouton bouton-light'  do
+      =link_to admin_configurable_path, class:'box box-light shadow-1 mtm bouton bouton-light'  do
         %i.zmdi.zmdi-wrench
         %div.small-inbl
           Configuration
     - if can? :read, User
-      =link_to  users_path, class:'box shadow-1 mtm bouton bouton-light'  do
+      =link_to  users_path, class:'box box-light shadow-1 mtm bouton bouton-light'  do
         %i.zmdi.zmdi-accounts
         %div.small-inbl
           Utilisateurs
     - if can? :read, Role
-      =link_to  roles_path, class:'box shadow-1 mtm bouton bouton-light'  do
+      =link_to  roles_path, class:'box box-light shadow-1 mtm bouton bouton-light'  do
         %i.zmdi.zmdi-key
         %div.small-inbl
           Roles
