--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,14 +1,14 @@
 %p#notice= notice
 %section.pam
-  .box.shadow-1.mtm
-    .box-top.pam
+  .box.box-light.shadow-1.mtm
+    .box-top.box-top-color.pam
       .circle.big= "#{current_user.firstname.first.upcase}"
       = @user.fullname
       -if can? :update, @user
         = link_to t('users.forms.buttons.edit'), edit_user_path(@user), class:"bouton fr bouton-light box"
     .box-bottom.pam
       .fr
-        #info-tech.pam.mam.box.bggrey
+        #info-tech.pam.mam.box.box-light.bggrey
           %h1= t('users.forms.titles.infos_sync')
           - %w(hruid last_gram_sync_at).each do |attribute|
             =display_attribute(@user, attribute)
@@ -18,7 +18,7 @@
             -else
               .bouton.bouton-light.fr= t('users.forms.buttons.syncable_in_x', count:(@user.next_sync_allowed_at-Time.now).round)
         -if can? :read, :admin
-          #info-tech.pam.mam.box.bggrey
+          #info-tech.pam.mam.box.box-light.bggrey
             %h1= t('users.forms.titles.infos_tech')
             - %w(role sign_in_count last_sign_in_at created_at updated_at).each do |attribute|
               =display_attribute(@user, attribute)
