--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -14,4 +14,32 @@
       .box-top.box-top-color.pam
         Box 2
       .box-bottom.pam
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        / il faut mettre une largeur pour tous les element pour que l'affichage se fasse bien
+        .group.group-m-form  
+          =text_field_tag "Name",nil, :class => "w100"
+          .span.highlight.w100
+          .span.bar.w100
+          =label_tag "Name"
+
+        .group.group-m-form  
+          =text_field_tag "Name",nil, :class => "w50"
+          .span.highlight.w50
+          .span.bar.w50
+          =label_tag "Name"
+
+        .group.group-m-form  
+          =text_field_tag "input2",nil, :class => "login w100"
+          .span.highlight.w100
+          .span.bar.w100
+          =label_tag "special input"
+
+        =submit_tag 'Ok !',:class => "bouton bouton_bleu", :id => "button_loading"
+        .mtm=submit_tag 'Disabled',:class => "bouton bouton_bleu", :id => "button_loading", :disabled => true
+
+      
+    / <div class="group">      
+    /   <input type="text" required>
+    /   <span class="highlight"></span>
+    /   <span class="bar"></span>
+    /   <label>Email</label>
+    / </div>
