--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -12,7 +12,7 @@
         %div.small-inbl
           Utilisateurs
     - if can? :read, Alias
-      =link_to  aliases_path, class:'box shadow-1 mtm bouton bouton-light' do
+      =link_to  aliases_path, class:'box box-light shadow-1 mtm bouton bouton-light' do
         %i.zmdi.zmdi-key
         %div.small-inbl
           Alias
@@ -22,12 +22,12 @@
         %div.small-inbl
           Roles
     - if can? :read, PostfixBlacklist
-      =link_to  postfix_blacklists_path, class:'box shadow-1 mtm bouton bouton-light'  do
+      =link_to  postfix_blacklists_path, class:'box box-light shadow-1 mtm bouton bouton-light'  do
         %i.zmdi.zmdi-key
         %div.small-inbl
           Blacklist
     - if can? :read, EmailVirtualDomain
-      =link_to  email_virtual_domains_path, class:'box shadow-1 mtm bouton bouton-light'  do
+      =link_to  email_virtual_domains_path, class:'box box-light shadow-1 mtm bouton bouton-light'  do
         %i.zmdi.zmdi-key
         %div.small-inbl
           Domaines
