--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -6,11 +6,13 @@
           =image_tag "logo_alumni.png", :class => "vertical-center"
       .menu
         %ul
+          %li
+            =link_to "Emails", dashboard_path
           - if user_signed_in?
             - if can? :read, :admin
-              %li{style: "width:420px;"}
+              %li{style: "width:320px;"}
                 =form_tag  search_by_id_users_path,:method => :get, :user_id => :id_element do
-                  =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :size => 30, :id_element => '#id', :placeholder => "nom.prenom.année"
+                  =autocomplete_field_tag 'Hruid', '', autocomplete_user_hruid_users_path, :size => 20, :id_element => '#id', :placeholder => "nom.prenom.année"
                   =hidden_field_tag "id"
                   =submit_tag 'GO!', :class => ""
               %li
