--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,8 +5,8 @@
       .circle.big= "#{current_user.firstname.first.upcase}"
       = @user.fullname
       -if can? :update, @user
-        = link_to t('users.forms.buttons.edit'), edit_user_path(@user), class:"bouton fr bouton-light box"
-        = link_to 'Dashboard', dashboard_user_path(@user), class:"bouton fr bouton-light box mrm"
+        = link_to t('users.forms.buttons.edit'), edit_user_path(@user), class:"button fr button-primary box"
+        = link_to 'Dashboard', dashboard_user_path(@user), class:"button fr button-primary box mrm"
     .box-bottom.pam
       .fr
         #info-tech.pam.mam.box.box-light.bggrey
@@ -15,9 +15,9 @@
             =display_attribute(@user, attribute)
           -if can?(:sync, @user) && @user.syncable?
             -if @user.next_sync_allowed_at <= Time.now
-              = link_to t('users.forms.buttons.sync_now'), sync_user_path, class:"bouton bouton-light fr"
+              = link_to t('users.forms.buttons.sync_now'), sync_user_path, class:"button fr button-primary"
             -else
-              .bouton.bouton-light.fr= t('users.forms.buttons.syncable_in_x', count:(@user.next_sync_allowed_at-Time.now).round)
+              .button.button-primary.fr= t('users.forms.buttons.syncable_in_x', count:(@user.next_sync_allowed_at-Time.now).round)
         -if can? :read, :admin
           #info-tech.pam.mam.box.box-light.bggrey
             %h1= t('users.forms.titles.infos_tech')
