--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,6 +64,7 @@ li.username{
   display: inline-block;
   text-align: center;
   vertical-align: middle;
+  overflow: hidden;
   border-radius: 50%; /* may require vendor prefixes */
   background: #EEE;
   font-weight:bold;
