--- a/app/views/shared/_er_list.html.haml
+++ b/app/views/shared/_er_list.html.haml
@@ -1,44 +1,50 @@
 
 -unless @user.has_google_apps
-	%div.bg-blue-dark-2
-		.pam
-			Avec un compte Google Apps, j'accède aux mails de la communauté en toute simplicité!
+  %div.bg-blue-dark-2
+    .pam
+      Avec un compte Google Apps, j'accède aux mails de la communauté en toute simplicité!
 
-			.mts= link_to ' Créer mon compte Google Apps ', create_google_apps_user_path(@user), :remote=>true,  :class =>"bouton bouton_bleu"
+      .mts= link_to ' Créer mon compte Google Apps ', create_google_apps_user_path(@user), :remote=>true,  :class =>"bouton bouton_bleu"
 - @emails_redirect.each do |e|
-	-if e.type_redir == "googleapps"
-		.pam.bg-blue-dark-2
-			%span
-				%i.zmdi.zmdi-google.icon-padding-list
-				Google Apps Gadz
-			%span.fr= link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"bouton-light"
-			
-	-else
-		%li
-			-if !e.confirmed || e.inactive? || e.broken?
-				-if e.broken?
-					%i.zmdi.zmdi-alert-triangle.icon-padding-list.red
-				-elsif !e.confirmed
-					%i.zmdi.zmdi-square-o.icon-padding-list.inactive
-				-else
-					= link_to user_email_redirect_account_flag_path(@user.id, e.id, "active"), :remote=>true do
-						%i.zmdi.zmdi-square-o.icon-padding-list.inactive
+  -if e.type_redir == "googleapps"
+    .pam.bg-blue-dark-2
+      %span
+        %i.zmdi.zmdi-google.icon-padding-list
+        Google Apps Gadz
+      %span.fr= link_to 'Connexion', "https://mail.google.com/a/gadz.org", :class =>"bouton-light"
 
-				%span.inactive=e.redirect
+  -else
+    %li
+      -if !e.confirmed || e.inactive? || e.broken?
+        -if e.broken?
+          %i.zmdi.zmdi-alert-triangle.icon-padding-list.red
+        -elsif !e.confirmed
+          %i.zmdi.zmdi-square-o.icon-padding-list.inactive
+        -else
+          = link_to user_email_redirect_account_flag_path(@user.id, e.id, "active"), :remote=>true do
+            %i.zmdi.zmdi-square-o.icon-padding-list.inactive
 
-			-elsif e.active?
-				= link_to user_email_redirect_account_flag_path(@user.id, e.id, "inactive"), :remote=>true do
-					%i.zmdi.zmdi-check-square.icon-padding-list
-				=e.redirect
-			-else
-				=e.redirect
-				%span.red flag error
+        %span.inactive=e.redirect
 
-			%span.fr
-				-unless e.confirmed
-					%i.zmdi.zmdi-lock.icon-padding-list.red
-				-#%i.zmdi.zmdi-edit.icon-padding-list
-				-if can? :destroy, e
-					= link_to user_email_redirect_account_path(@user,e), method: :delete, :remote => true, confirm: true do
-						%i.zmdi.zmdi-delete.icon-padding-list
+      -elsif e.active?
+        = link_to user_email_redirect_account_flag_path(@user.id, e.id, "inactive"), :remote=>true do
+          %i.zmdi.zmdi-check-square.icon-padding-list
+        =e.redirect
+      -else
+        =e.redirect
+        %span.red flag error
+
+      %span.fr
+        -unless e.confirmed
+          -if can? :read, :admin
+            = link_to confirm_user_email_redirect_accounts_url(@user, e.confirmation_token), method: :get, :remote => true, title: 'Valider email', rel: 'tooltip', data: {confirm: "Vous allez forcer la validation d'un email. L'utilisateur n'aura pas besoin de confirmer cette adresse en cliquant sur le lien qu'il a reçu lors de son ajout."} do
+              %i.zmdi.zmdi-lock.icon-padding-list.red
+          -else
+            = link_to "#", title: "Un email t'as été sur cette adresse pour la confirmer" , rel: 'tooltip' do
+              %i.zmdi.zmdi-lock.icon-padding-list.red
+
+        -#%i.zmdi.zmdi-edit.icon-padding-list
+        -if can? :destroy, e
+          = link_to user_email_redirect_account_path(@user,e), method: :delete, :remote => true, confirm: true do
+            %i.zmdi.zmdi-delete.icon-padding-list
 
