--- a/app/views/aliases/_form.html.haml
+++ b/app/views/aliases/_form.html.haml
@@ -3,6 +3,8 @@
 
   .form-inputs
     = f.input :email
+    -#= f.input :email_virtual_domain_id
+    = f.association :email_virtual_domain, collection: @evd
     = f.input :redirect
   .form-actions
     = f.button :submit
