--- a/app/views/setup/index.html.haml
+++ b/app/views/setup/index.html.haml
@@ -1,22 +1,27 @@
 %p#notice= notice
 %section.pam
-  .box.box-light.shadow-1.mtm.txtcenter
+  .box.box-light.shadow-1.mtm.center.w500p
     .box-top.pam.box-top-color
-      %h2 Il nous manque quelques informations pour finaliser ton compte !
+      Ton compte est presque prêt...
     .box-bottom.pam
       =form_tag('') do
         %p
-          Sur quel adresse veux-tu recevoir tes mails ?
-        .group.group-m-form.inbl.mtm
-          =email_field_tag :redirect,nil, :size => 15, :required => 'required'
-          =label_tag "email@domaine.fr"
+          Il nous manque quelques informations pour finaliser ton compte.
         %p
-          Veux-tu qu'on te crée un compte Google Gadz.org ?
+          Tu peux recevoir les mails envoyés à ton adresse #{@primary_email} sur un compte Google Gadz.org
+        %p
+          Veux-tu qu'on te créé un compte Google Gadz.org ?
         .group
           =radio_button_tag :google_apps, :true, :required => 'required'
           =label_tag :google_apps_true,"Oui", :for => "google_apps_true"
-          =radio_button_tag :google_apps, :false, :required => 'required'
+          =radio_button_tag :google_apps, :false
           =label_tag :google_apps_true,"Non"
-        =submit_tag "OK !", class:'mtm'
+        %p
+          Les mails envoyés sur ton adresse #{@primary_email} peuvent être envoyé également sur l'adresse email de ton choix. Cette adresse est également utilisée en cas de problème.
+        .group.group-m-form.inbl.mtm
+          =email_field_tag :redirect,nil, :size => 15, :required => 'required'
+          =label_tag "email@domaine.fr"
+        .group
+          =submit_tag "Créer mon compte !", class:'mtm'
 
 
