fix column name

--- a/app/views/ml/lists/_form.html.haml
+++ b/app/views/ml/lists/_form.html.haml
@@ -6,7 +6,7 @@
     = f.input :email
     = f.input :description
     = f.input :aliases
-    = f.input :diffusion_policy_id
+    = f.input :diffusion_policy
     = f.input :inscription_policy_id
     = f.input :is_public
     = f.input :messsage_header
