--- a/app/views/ml/lists/index.html.haml
+++ b/app/views/ml/lists/index.html.haml
@@ -30,7 +30,7 @@
         %td= ml_list.email
         %td= ml_list.description
         %td= ml_list.aliases
-        %td= ml_list.diffusion_policy_id
+        %td= ml_list.diffusion_policy
         %td= ml_list.inscription_policy_id
         %td= ml_list.is_public
         %td= ml_list.messsage_header
