--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -14,7 +14,7 @@
   = @ml_list.aliases
 %p
   %b Diffusion policy:
-  = @ml_list.diffusion_policy_id
+  = @ml_list.diffusion_policy
 %p
   %b Inscription policy:
   = @ml_list.inscription_policy_id
