--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -18,6 +18,13 @@
         %i.zmdi.zmdi-key
         %div.small-inbl
           Roles
+  %h2 Listes de diffusion
+  .grid-4-small-1
+    - if can? :manage, :admin
+      =link_to  ml_lists_path, class:'box box-light shadow-1 mtm bouton bouton-light' do
+        %i.zmdi.zmdi-format-list-bulleted
+        %div.small-inbl
+          Lists
   %h2 Zenimel
   .grid-4-small-1
     - if can? :read, Alias
