--- a/app/views/shared/_ml_list.html.haml
+++ b/app/views/shared/_ml_list.html.haml
@@ -1,10 +1,13 @@
 -lists.each do |l|
   %li
-    =l.name
-    =l.email
-    -if l.users.include?(user)
-      = link_to ml_list_leave_path(l.id, user.id), title: 'Quitter la liste', rel: 'tooltip', :remote=>true do
-        Leave !
-    -else
-      = link_to ml_list_join_path(l.id, user.id), title: 'Rejoindre la liste', rel: 'tooltip', :remote=>true do
-        Join !
+    =link_to ml_list_path(l) do
+      =l.name
+      =l.email
+    (#{l.users.count} membres)
+    %span.fr
+      -if l.users.include?(user)
+        = link_to ml_list_leave_path(l.id, user.id), title: 'Quitter la liste', rel: 'tooltip', :remote=>true do
+          Quiter
+      -else
+        = link_to ml_list_join_path(l.id, user.id), title: 'Rejoindre la liste', rel: 'tooltip', :remote=>true do
+          Rejoindre
