--- a/app/views/ml/lists/show.html.haml
+++ b/app/views/ml/lists/show.html.haml
@@ -13,7 +13,7 @@
     = @ml_list.diffusion_policy
   %p
     %b Inscription policy:
-    = @ml_list.inscription_policy_id
+    = @ml_list.inscription_policy
   %p
     %b Is public:
     = @ml_list.is_public
